src/test/compile-fail/bad-underscore3.rs
fn one(f: fn(int)) {}
fn two(f: fn(int, int)) {}

fn main() {
    let x = _[3];  //! ERROR `_` can only appear as part of
}